fix small gaps in table borders on Chrome

--- a/docs/source/_static/wakepy-docs.css
+++ b/docs/source/_static/wakepy-docs.css
@@ -104,7 +104,8 @@ dl.py > dd > ul {
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--wakepy-table-color-border);
+    outline: 1px solid var(--wakepy-table-color-border);
   }
 
 .wakepy-table th,
